welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: not found: value avancer
			  avancer()
                          ^BDR2:6: error: not found: value avancer
			  avancer()
                          ^BDR2:9: error: not found: value avancer
			  avancer()
                          ^BDR2:10: error: not found: value avancer
	case "A" => avancer();
                    ^BDR2:11: error: not found: value avancer
	case "B" => avancer();
                    ^BDR2:12: error: not found: value avancer
			  avancer()
                          ^BDR2:13: error: not found: value avancer
	case "C" => avancer();
                    ^BDR2:14: error: not found: value avancer
			  avancer();
                          ^BDR2:15: error: not found: value avancer
			  avancer()
                          ^BDR2:16: error: not found: value avancer
	case "D" => avancer();
                    ^BDR2:17: error: not found: value avancer
			  avancer();
                          ^BDR2:18: error: not found: value avancer
			  avancer();
                          ^BDR2:19: error: not found: value avancer
			  avancer()
                          ^BDR2:20: error: not found: value avancer
	case "E" => avancer();
                    ^BDR2:21: error: not found: value avancer
			  avancer();
                          ^BDR2:22: error: not found: value avancer
			  avancer();
                          ^BDR2:23: error: not found: value avancer
			  avancer();
                          ^BDR2:24: error: not found: value avancer
			  avancer()
                          ^BDR2:25: error: not found: value avancer
	case "F" => avancer();
                    ^BDR2:26: error: not found: value avancer
			  avancer();
                          ^BDR2:27: error: not found: value avancer
			  avancer();
                          ^BDR2:28: error: not found: value avancer
			  avancer();
                          ^BDR2:29: error: not found: value avancer
			  avancer();
                          ^BDR2:30: error: not found: value avancer
			  avancer()
                          ^BDR2:31: error: not found: value reculer
	case "Z" => reculer()
                    ^BDR2:32: error: not found: value reculer
	case "Y" => reculer();
                    ^BDR2:33: error: not found: value reculer
			  reculer()
                          ^BDR2:34: error: not found: value reculer
	case "X" => reculer();
                    ^BDR2:35: error: not found: value reculer
			  reculer();
                          ^BDR2:36: error: not found: value reculer
			  reculer()
                          ^BDR2:37: error: not found: value reculer
	case "W" => reculer();
                    ^BDR2:38: error: not found: value reculer
			  reculer();
                          ^BDR2:39: error: not found: value reculer
			  reculer();
                          ^BDR2:40: error: not found: value reculer
			  reculer()
                          ^BDR2:41: error: not found: value reculer
	case "V" => reculer();
                    ^BDR2:42: error: not found: value reculer
			  reculer();
                          ^BDR2:43: error: not found: value reculer
			  reculer();
                          ^BDR2:44: error: not found: value reculer
			  reculer();
                          ^BDR2:45: error: not found: value reculer
			  reculer()
                          ^BDR2:46: error: not found: value reculer
	case "U" => reculer();
                    ^BDR2:47: error: not found: value reculer
			  reculer();
                          ^BDR2:48: error: not found: value reculer
			  reculer();
                          ^BDR2:49: error: not found: value reculer
			  reculer();
                          ^BDR2:50: error: not found: value reculer
			  reculer();
                          ^BDR2:51: error: not found: value reculer
			  reculer()
                          ^